# RustPrimeSieve

./: Cargo.toml
src/: main.rs  multiplier.rs  printer.rs
