[package]
name = "PrimeSieveRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "prime_sieve"
path = "src/main.rs"

[[bin]]
name = "multipler"
path = "src/multiplier.rs"

[[bin]]
name = "printer"
path = "src/printer.rs"

[dependencies]
rust-gmp = "0.5.0"
socketpair = "0.17.0"
